--- a/markup/_dist/faq.html
+++ b/markup/_dist/faq.html
@@ -90,7 +90,7 @@
     </header>
     <main>
       <section class="nl-section nl-faq">
-        <div class="container">
+        <div class="container-fluid">
           <div class="row">
             <div class="col-12">
               <h2>FAQ</h2>
