updated FAQ to look more like other pages and contact is starting to look real nice

--- a/markup/_dist/contact.html
+++ b/markup/_dist/contact.html
@@ -90,24 +90,32 @@
     </header>
     <main>
       <section class="nl-section contact-wrapper">
-        <div id="contactSection" tabindex="-1" role="dialog" aria-labelledby="contactSectionLabel" aria-hidden="true">
-          <div role="document" class="block-dialog">
-            <div class="block-content">
-              <div class="block-header">
-                <h2 id="contactLabel" class="modal-title">Contact</h2>
-              </div>
-              <div class="block-body">
-                <form class="form-signin">
-                  <div class="nl-contact-group-wrapper"><img src="assets/img/address-icon.png" alt="address icon" class="address-icon">
-                    <p>No Limit Fantasy Sports, LLC<br>  1407 Foothill Blvd #305<br> La Verne, CA 91750</p>
+        <div class="row">
+          <div class="col-lg-8 offset-lg-4 col-md-6 offset-md-3 col-sm-6 offset-sm-3 col-12">
+            <h1>Contact</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-8 offset-lg-4 col-md-10 offset-md-2 col-sm-12 col-12">
+            <div id="contactSection" tabindex="-1" role="dialog" aria-labelledby="contactSectionLabel" aria-hidden="true">
+              <div role="document" class="block-dialog">
+                <div class="block-content">
+                  <div class="block-body">
+                    <form class="form-signin">
+                      <div class="nl-contact-group-wrapper"><img src="assets/img/address-icon.png" alt="address icon" class="address-icon">
+                        <p>No Limit Fantasy Sports, LLC<br>  1407 Foothill Blvd #305<br> La Verne, CA 91750</p>
+                      </div>
+                      <div class="nl-contact-group-wrapper"><img src="assets/img/mail-icon.png" alt="mail icon" class="mail-icon">
+                        <p><a href="mailto:nlfantasymonitor@gmail.com">nlfantasymonitor@gmail.com</a></p>
+                      </div>
+                    </form>
                   </div>
-                  <div class="nl-contact-group-wrapper"><img src="assets/img/mail-icon.png" alt="mail icon" class="mail-icon">
-                    <p><a href="mailto:nlfantasymonitor@gmail.com">nlfantasymonitor@gmail.com</a></p>
-                  </div>
-                  <p>For information regarding Advertising or<br>Affiliates, please email<a href="mailto:oaperalta27@gmail.com">oaperalta27@gmail.com</a></p>
-                </form>
+                </div>
               </div>
             </div>
+          </div>
+          <div class="col-lg-8 offset-lg-4 col-md-6 offset-md-3 col-sm-6 offset-sm-3 col-8 offset-2">
+            <p class="ads">For information regarding Advertising or Affiliates, please email: &nbsp;<a href="mailto:oaperalta27@gmail.com">oaperalta27@gmail.com</a></p>
           </div>
         </div>
       </section>
