--- a/markup/_dist/faq.html
+++ b/markup/_dist/faq.html
@@ -93,11 +93,11 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
-              <h2>FAQ</h2>
+              <h1>FAQ</h1>
               <div id="accordion" role="tablist" aria-multiselectable="true">
                 <div class="card">
                   <div role="tab" id="headingOne" class="card-header">
-                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="collapsed">why nlc2?</a></h5>
+                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="collapsed">Why NLC2?</a></h5>
                   </div>
                   <div id="collapseOne" role="tabpanel" aria-labelledby="headingOne" class="collapse ">
                     <div class="card-block">
@@ -107,7 +107,7 @@
                 </div>
                 <div class="card">
                   <div role="tab" id="headingTwo" class="card-header">
-                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" class="collapsed">what is no limit fantasy sports</a></h5>
+                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" class="collapsed">What is No Limit Fantasy Sports</a></h5>
                   </div>
                   <div id="collapseTwo" role="tabpanel" aria-labelledby="headingOne" class="collapse">
                     <div class="card-block">
