--- a/markup/_dist/my_balances.html
+++ b/markup/_dist/my_balances.html
@@ -92,25 +92,38 @@
       <section class="nl-section nl-my-balances">
         <div class="container nl-my-balances-wrapper">
           <div class="row">
-            <div class="col-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="col-12">
+              <h2>Exchange rate</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4 offset-lg-2">
               <div class="quote-wrapper">
                 <p>NLC2 - BTC:<span class="value">0.000043</span></p>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-6 col-lg-4 offset-lg-4">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4">
               <div class="quote-wrapper">
                 <p>NLC2 - USD :<span class="value">0.16089</span></p>
               </div>
             </div>
           </div>
-          <div class="row">
+          <div class="row deposit-purchase">
+            <div class="col-sm-1 col-md-1 col-lg-3"></div>
+            <div class="col-12 col-sm-10 col-md-10 col-lg-6">
+              <button class="btn btn-primary">DEPOSIT</button>
+              <button class="btn btn-primary">purchase </button>
+            </div>
+            <div class="col-sm-1 col-md-1 col-lg-3"> </div>
+          </div>
+          <div class="row balance-spacing">
             <div class="col-12">
               <h2>MY BALANCE</h2>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-2 col-sm-1 col-md-1"></div>
-            <div class="col-12 col-sm-10 col-md-10 col-lg-8">
+            <div class="col-md-1 col-lg-2"></div>
+            <div class="col-12 col-sm-12 col-md-10 col-lg-8">
               <table class="table balance-table">
                 <thead>
                   <tr>
@@ -133,22 +146,16 @@
                 </tbody>
               </table>
             </div>
-            <div class="col-lg-2 col-sm-1 col-md-1">               </div>
-          </div>
-          <div class="row nl-balances-btn-wrapper">
-            <div class="col-12"> 
-              <button class="btn btn-primary">DEPOSIT</button>
-              <button class="btn btn-primary">purchase</button>
-            </div>
+            <div class="col-md-1 col-lg-2">                         </div>
           </div>
           <div class="row balance-status">
             <div class="col-12">
-              <h2>BALANCE STATUS</h2>
+              <h2>STATUS</h2>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-2 col-sm-1 col-md-1"></div>
-            <div class="col-12 col-sm-10 col-md-10 col-lg-8">
+            <div class="col-md-1 col-lg-2"></div>
+            <div class="col-12 col-sm-12 col-md-10 col-lg-8">
               <table class="table balance-table">
                 <thead>
                   <tr>
@@ -171,13 +178,15 @@
                 </tbody>
               </table>
             </div>
-            <div class="col-lg-2 col-sm-1 col-md-1">   </div>
+            <div class="col-md-1 col-lg-2"></div>
           </div>
-          <div class="row nl-balances-btn-wrapper">
-            <div class="col-12">
-              <button class="btn btn-primary">STATEMENT</button>
-              <button class="btn btn-primary">WITHDRAW</button>
+          <div class="row deposit-purchase">
+            <div class="col-sm-1 col-md-1 col-lg-3"></div>
+            <div class="col-12 col-sm-10 col-md-10 col-lg-6">
+              <button class="btn btn-primary">Withdraw</button>
+              <button class="btn btn-primary">statement </button>
             </div>
+            <div class="col-sm-1 col-md-1 col-lg-3"> </div>
           </div>
         </div>
       </section>
