--- a/markup/_dist/faq.html
+++ b/markup/_dist/faq.html
@@ -31,10 +31,17 @@
                   </div>
                   <div class="col-lg-5 nl-header-top--right">
                     <div class="nl-profile">
-                      <div class="nl-profile--avatar"><i class="fa fa-user-circle" aria-hidden="true"></i></div>
-                      <div class="nl-profile--data">
-                        <div class="name">Name</div>
-                        <div class="settings"><a href="#"><i class="fa fa-cog" aria-hidden="true"></i></a><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a><a href="#"><i class="fa fa-bell" aria-hidden="true"></i></a></div>
+                      <div class="row">
+                        <div class="col-lg-12">
+                          <div class="nl-profile--avatar"><img src="assets/img/profile-picture.png" alt="NO Limit">
+                          </div>
+                        </div>
+                        <div class="col-lg-12">
+                          <div class="nl-profile--data">
+                            <div class="name">Name</div>
+                          </div>
+                        </div>
+                        
                       </div>
                     </div>
                     <div class="nl-balance">
