make contact title correctly above section

--- a/markup/_dist/contact.html
+++ b/markup/_dist/contact.html
@@ -98,7 +98,7 @@
     <main>
       <section class="nl-section contact-wrapper">
         <div class="row">
-          <div class="col-lg-8 offset-lg-4 col-md-6 offset-md-3 col-sm-6 offset-sm-3 col-12">
+          <div class="col-lg-8 offset-lg-4 col-md-6 offset-md-2 col-sm-12 col-12 contact-title">
             <h1>Contact</h1>
           </div>
         </div>
@@ -121,7 +121,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-8 offset-lg-4 col-md-6 offset-md-3 col-sm-6 offset-sm-3 col-8 offset-2">
+          <div class="col-lg-8 offset-lg-4 col-md-6 offset-md-2 col-sm-6 offset-sm-1 col-8 offset-1">
             <p class="ads">For information regarding Advertising or Affiliates, please email: &nbsp;<a href="mailto:oaperalta27@gmail.com">oaperalta27@gmail.com</a></p>
           </div>
         </div>
