login update and header for form

--- a/markup/_dist/index.html
+++ b/markup/_dist/index.html
@@ -18,7 +18,7 @@
         <div class="container-fluid">
           <div class="row align-items-start">
             <div class="col-4 col-lg-2">
-              <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.svg" alt="NO Limit"></a></div>
+              <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.png" alt="NO Limit"></a></div>
             </div>
             <div class="col-1 col-lg-7">
               <div class="nl-title">The worlds first crypto fantasy sports</div>
