--- a/markup/_dist/login.html
+++ b/markup/_dist/login.html
@@ -18,13 +18,13 @@
         <div class="container-fluid">
           <div class="row align-items-start">
             <div class="col-4 col-lg-2">
-              <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.svg" alt="NO Limit"></a></div>
+              <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.png" alt="NO Limit"></a></div>
             </div>
             <div class="col-1 col-lg-7">
               <div class="nl-title">The worlds first crypto fantasy sports</div>
             </div>
             <div class="col-12 col-lg-3">
-              <div class="nl-btutton-login">
+              <div class="nl-button-login">
                 <button type="button" data-toggle="modal" data-target="#loginModal" class="btn btn-primary nl-m-r-15">Login</button>
                 <button type="button" data-toggle="modal" data-target="#registrationModal" class="btn">SIGN UP</button>
               </div>
@@ -34,52 +34,47 @@
       </div>
     </header>
     <main>
-      <div class="nl-white-bg"></div>
       <section class="nl-section login-wrapper">
-        <div id="loginSection" tabindex="-1" role="dialog" aria-labelledby="loginSectionLabel" aria-hidden="true">
-          <div role="document" class="block-dialog">
-            <div class="block-content">
-              <div class="block-header">
-                <h2 id="loginSectionLabel" class="modal-title">Login</h2><a href="index.html" class="close"><span aria-hidden="true"></span></a>
-              </div>
-              <div class="block-body">
-                <form class="form-signin">
-                  <div class="input-group">
-                    <input id="inputEmail" type="email" placeholder="SCREEN NAME OR EMAIL" required="" autofocus="" class="form-control">
-                  </div>
-                  <div class="input-group">
-                    <input type="password" placeholder="PASSWORD" aria-describedby="show" class="form-control"><span class="show-password input-group-addon">show</span>
-                  </div><a href="#">FORGOT MY PASSWORD</a>
-                </form>
-              </div>
-              <div class="block-footer">
-                <button type="submit" class="btn btn-primary btn-block">Login</button>
+        <div class="row">
+          <div class="col-lg-3"> </div>
+          <div class="col-lg-6"> 
+            <div id="loginSection" tabindex="-1" role="dialog" aria-labelledby="loginSectionLabel" aria-hidden="true">
+              <div role="document" class="block-dialog"></div>
+              <div class="block-content">
+                <div class="block-header">
+                  <h2 id="loginSectionLabel" class="modal-title">Login</h2>
+                </div>
+                <div class="block-body">
+                  <form class="form-signin">
+                    <div class="input-group">
+                      <input id="inputEmail" type="email" placeholder="SCREEN NAME OR EMAIL" required="" autofocus="" class="form-control">
+                    </div>
+                    <div class="input-group">
+                      <input type="password" placeholder="PASSWORD" aria-describedby="show" class="form-control"><span class="show-password input-group-addon">show</span>
+                    </div>
+                    <button class="btn btn-primary">LOGIN</button>
+                    <p class="forget-password">FORGOT PASSWORD</p><div class="g-recaptcha" data-sitekey="6Lf-kjMUAAAAALqIEnd5dP1T-hQbpXOBPLd1ilJD"></div>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
+          <div class="col-lg-3"></div>
         </div>
       </section>
     </main>
     <!--Footer Block-->
     <footer class="nl-footer">
-      <div class="nl-footer--top">
-        <div class="row align-items-center">
-          <div class="col-lg-1"><a href="index.html"><img src="assets/img/nl-footer-logo.jpg" alt="NO Limit"></a></div>
-          <div class="col-lg-8">
-            <p>Residents of the states of Alabama, Arizona, Colorado, Delaware, Florida, Georgia, Hawaii, Idaho, Illinois, Indiana, Iowa, Louisiana, Massachusetts, Michigan, Mississippi, Missouri, Montana, Nevada, New York, North Dakota, Pennsylvania, Tennessee, Texas, Vermont, Virginia and Washington, as well as Puerto Rico and countries where otherwise prohibited by law are not eligible to enter Fantasy Sports Pay to play contests. Free - roll contests are open to all the public over 18 as it does not fall into the pay-to-play category as advertisers provide the prizes.</p>
-          </div>
-          <div class="col-lg-3 nl-tar">
-            <div class="input-group-btn"><a htef="#" class="btn btn-footer">Forum</a><a htef="#" class="btn btn-footer">Contact Us</a></div>
-            <div class="input-group-btn"><a htef="#" class="btn btn-footer">Faq</a><a htef="#" class="btn btn-footer">Terms & Conditions</a></div>
-          </div>
-        </div>
-      </div>
       <div class="nl-footer--button">
-        <div class="row align-items-center">
-          <div class="col-lg-9">
-            <p>Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy</p>
+        <div class="row">
+          <div class="col-lg-8">
+            <div class="nl-social-icon"><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a><a class="btn btn-charity"><span>Charity<br>Projects</span></a></div>
+            <p><br />Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy<br /></p>
           </div>
-          <div class="col-lg-3 nl-social-icon nl-tar"><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+          <div class="col-lg-4 nl-tar">
+            <div class="input-group-btn"><a href="#" class="btn btn-footer">Helpdesk</a><a href="contact.html" class="btn btn-footer">Contact Us</a></div>
+            <div class="input-group-btn"><a href="faq.html" class="btn btn-footer">Faq</a><a href="terms_conditions.html" class="btn btn-footer">Terms & Conditions</a></div>
+          </div>
         </div>
       </div>
     </footer>
