--- a/markup/_dist/register.html
+++ b/markup/_dist/register.html
@@ -18,13 +18,13 @@
         <div class="container-fluid">
           <div class="row align-items-start">
             <div class="col-4 col-lg-2">
-              <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.svg" alt="NO Limit"></a></div>
+              <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.png" alt="NO Limit"></a></div>
             </div>
             <div class="col-1 col-lg-7">
               <div class="nl-title">The worlds first crypto fantasy sports</div>
             </div>
             <div class="col-12 col-lg-3">
-              <div class="nl-btutton-login">
+              <div class="nl-button-login">
                 <button type="button" data-toggle="modal" data-target="#loginModal" class="btn btn-primary nl-m-r-15">Login</button>
                 <button type="button" data-toggle="modal" data-target="#registrationModal" class="btn">SIGN UP</button>
               </div>
