registration page update

--- a/markup/_dist/register.html
+++ b/markup/_dist/register.html
@@ -34,82 +34,78 @@
       </div>
     </header>
     <main>
-      <div class="nl-white-bg"></div>
-      <section class="nl-section register-wrapper">
-        <div id="registrationSection" tabindex="-1" role="dialog" aria-labelledby="registrationSectionLabel" aria-hidden="true">
-          <div role="document" class="block-dialog">
-            <div class="block-content">
-              <div class="block-header">
-                <h2 id="registrationSectionLabel" class="block-title">Registration</h2><a href="index.html" class="close"><span aria-hidden="true"></span></a>
-              </div>
-              <div class="block-body">
-                <form class="form-signin">
-                  <div class="input-group">
-                    <input id="inputEmail" type="email" placeholder="EMAIL" required="" autofocus="" class="form-control">
-                  </div>
-                  <div class="input-group">
-                    <input type="password" placeholder="PASSWORD" aria-describedby="show" class="form-control"><span class="show-password input-group-addon">show</span>
-                  </div>
-                  <div class="input-group">
-                    <input type="password" placeholder="RE-TYPE PASSWORD" class="form-control">
-                  </div>
-                  <div class="input-group">
-                    <input id="screenName" placeholder="SCREEN NAME" required="" autofocus="" class="form-control">
-                  </div>
-                  <div class="input-group">
-                    <input id="firstName" placeholder="FIRST NAME" required="" autofocus="" class="form-control">
-                  </div>
-                  <div class="input-group">
-                    <input id="lastName" placeholder="LAST NAME" required="" autofocus="" class="form-control">
-                  </div>
-                  <div class="input-group">
-                    <select id="country" placeholder="COUNTRY" required="" class="form-control custom-select">
-                      <option selected="" disabled="" hidden="">COUNTRY</option>
-                      <option>USA</option>
-                      <option>CANADA</option>
-                      <option>UK</option>
-                      <option>PORTUGAL</option>
-                    </select>
-                  </div>
-                  <div class="input-group">
-                    <input id="promoCode" placeholder="PROMO CODE(OPTIONAL)" required="" autofocus="" class="form-control">
-                  </div>
-                  <div data-sitekey="your_site_key" class="g-recaptcha"></div>
-                  <label class="check-wrapper">
-                    <input type="checkbox" value="">
-                    <p>I agree to the No Limit Fantasy Sports, LLC Contest <a href="#">Rules</a> , <a href="#">Terms and Conditions</a>  and <a href="#">Privacy Policy</a>  and represent that I am of legal age to play Fantasy Sports in my state of residence. Residents of the states of Alabama, Arizona, Colorado, Delaware, Florida, Georgia, Hawaii, Idaho, Illinois, Indiana, Iowa, Louisiana, Massachusetts, Michigan, Mississippi, Missouri, Montana, Nevada, New York, North Dakota, Pennsylvania, Tennessee, Texas, Vermont, Virginia and Washington, as well as Puerto Rico and where otherwise prohibited by law are not eligible to enter Fantasy Sports Pay to play contests.
-                    </p>
-                  </label>
-                </form>
-              </div>
-              <div class="block-footer">
-                <button type="submit" class="btn btn-primary btn-block">REGISTER</button>
+      <section class="nl-section registration-wrapper">
+        <div class="row">
+          <div class="col-lg-2"> </div>
+          <div class="col-lg-8"> 
+            <div id="registrationSection" tabindex="-1" role="dialog" aria-labelledby="loginSectionLabel" aria-hidden="true">
+              <div role="document" class="block-dialog"></div>
+              <div class="block-content">
+                <div class="block-header">
+                  <h2 id="loginSectionLabel" class="modal-title">Sign Up</h2>
+                </div>
+                <div class="block-body">
+                  <form class="form-signin">
+                    <div class="input-group">
+                      <input id="inputEmail" type="email" placeholder="EMAIL" required="" autofocus="" class="form-control">
+                    </div>
+                    <div class="input-group">
+                      <input type="password" placeholder="PASSWORD" aria-describedby="show" class="form-control"><span class="show-password input-group-addon">show</span>
+                    </div>
+                    <div class="input-group">
+                      <input type="password" placeholder="RE-TYPE PASSWORD" class="form-control">
+                    </div>
+                    <div class="input-group">
+                      <input id="screenName" placeholder="SCREEN NAME" required="" autofocus="" class="form-control">
+                    </div>
+                    <div class="input-group">
+                      <input id="firstName" placeholder="FIRST NAME" required="" autofocus="" class="form-control">
+                    </div>
+                    <div class="input-group">
+                      <input id="lastName" placeholder="LAST NAME" required="" autofocus="" class="form-control">
+                    </div>
+                    <div class="input-group">
+                      <select id="country" placeholder="COUNTRY" required="" class="form-control custom-select">
+                        <option selected="" disabled="" hidden="">COUNTRY</option>
+                        <option>USA</option>
+                        <option>CANADA</option>
+                        <option>UK</option>
+                        <option>PORTUGAL</option>
+                      </select>
+                    </div>
+                    <div class="input-group">
+                      <input id="promoCode" placeholder="PROMO CODE(OPTIONAL)" required="" autofocus="" class="form-control">
+                    </div>
+                    <div data-sitekey="your_site_key" class="g-recaptcha"></div>
+                    <label class="check-wrapper">
+                      <input type="checkbox" value="">
+                      <p>I agree to the No Limit Fantasy Sports, LLC Contest <a href="#">Rules</a> , <a href="#">Terms and Conditions</a>  and <a href="#">Privacy Policy</a>  and represent that I am of legal age to play Fantasy Sports in my state of residence. Residents of the states of Alabama, Arizona, Colorado, Delaware, Florida, Georgia, Hawaii, Idaho, Illinois, Indiana, Iowa, Louisiana, Massachusetts, Michigan, Mississippi, Missouri, Montana, Nevada, New York, North Dakota, Pennsylvania, Tennessee, Texas, Vermont, Virginia and Washington, as well as Puerto Rico and where otherwise prohibited by law are not eligible to enter Fantasy Sports Pay to play contests.
+                      </p>
+                    </label>
+                  </form>
+                </div>
+                <div class="block-footer">
+                  <button type="submit" class="btn btn-primary btn-block">REGISTER</button>
+                </div>
               </div>
             </div>
           </div>
+          <div class="col-lg-2"></div>
         </div>
       </section>
     </main>
     <!--Footer Block-->
     <footer class="nl-footer">
-      <div class="nl-footer--top">
-        <div class="row align-items-center">
-          <div class="col-lg-1"><a href="index.html"><img src="assets/img/nl-footer-logo.jpg" alt="NO Limit"></a></div>
-          <div class="col-lg-8">
-            <p>Residents of the states of Alabama, Arizona, Colorado, Delaware, Florida, Georgia, Hawaii, Idaho, Illinois, Indiana, Iowa, Louisiana, Massachusetts, Michigan, Mississippi, Missouri, Montana, Nevada, New York, North Dakota, Pennsylvania, Tennessee, Texas, Vermont, Virginia and Washington, as well as Puerto Rico and countries where otherwise prohibited by law are not eligible to enter Fantasy Sports Pay to play contests. Free - roll contests are open to all the public over 18 as it does not fall into the pay-to-play category as advertisers provide the prizes.</p>
-          </div>
-          <div class="col-lg-3 nl-tar">
-            <div class="input-group-btn"><a htef="#" class="btn btn-footer">Forum</a><a htef="#" class="btn btn-footer">Contact Us</a></div>
-            <div class="input-group-btn"><a htef="#" class="btn btn-footer">Faq</a><a htef="#" class="btn btn-footer">Terms & Conditions</a></div>
-          </div>
-        </div>
-      </div>
       <div class="nl-footer--button">
-        <div class="row align-items-center">
-          <div class="col-lg-9">
-            <p>Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy</p>
+        <div class="row">
+          <div class="col-lg-8">
+            <div class="nl-social-icon"><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a><a class="btn btn-charity"><span>Charity<br>Projects</span></a></div>
+            <p><br />Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy<br /></p>
           </div>
-          <div class="col-lg-3 nl-social-icon nl-tar"><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+          <div class="col-lg-4 nl-tar">
+            <div class="input-group-btn"><a href="#" class="btn btn-footer">Helpdesk</a><a href="contact.html" class="btn btn-footer">Contact Us</a></div>
+            <div class="input-group-btn"><a href="faq.html" class="btn btn-footer">Faq</a><a href="terms_conditions.html" class="btn btn-footer">Terms & Conditions</a></div>
+          </div>
         </div>
       </div>
     </footer>
