--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -100,12 +100,12 @@
       <section class="nl-section nl-players nl-create-team soccer">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-8 offset-md-2 col-lg-12 col-xl-12 offset-lg-0 offset-xl-0">
               <h1>CREATE TEAM</h1>
             </div>
           </div>
           <div class="row sports-filtering">
-            <div class="col-xs-12">
+            <div class="col-md-8 offset-md-2 col-lg-12 col-xl-12 offset-lg-0 offset-xl-0">
               <div class="nl-players-filter-title">Filter by league:</div>
               <div class="nl-players-filter">
                 <div class="row align-items-center">
@@ -188,7 +188,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12 col-lg-7 col-xl-7">
+            <div class="col-md-8 offset-md-2 col-lg-7 offset-lg-0 offset-xl-0 col-xl-7">
               <div class="nl-players-table nl-create-team-table">
                 <div class="nl-players-table-data-field">
                   <div class="nl-data--avatar hidden-sm-down"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"></div>
