lined out fields again after payout button margin increase

--- a/markup/_dist/football_enter_contests.html
+++ b/markup/_dist/football_enter_contests.html
@@ -417,7 +417,7 @@
                   <thead>
                     <tr>
                       <th> 
-                        <button class="btn btn-primary">Payout</button>
+                        <button class="btn btn-primary payout">Payout</button>
                       </th>
                     </tr>
                   </thead>
