--- a/markup/_dist/enter_contests.html
+++ b/markup/_dist/enter_contests.html
@@ -446,7 +446,7 @@
                   <thead>
                     <tr>
                       <th> 
-                        <button class="btn btn-primary">Payout</button>
+                        <button class="btn btn-primary payout">Payout</button>
                       </th>
                     </tr>
                   </thead>
