added save and delete button

--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -1170,6 +1170,10 @@
               </div>
             </div>
             <div class="col-md-12 col-lg-5 col-xl-5">
+              <div class="save-delete">
+                <button class="btn btn-primary">Save</button>
+                <button class="btn btn-warning">Delete</button>
+              </div>
               <div class="nl-team-info">
                 <div class="nl-team-name">your team</div>
                 <div class="nl-team-data">
@@ -1191,7 +1195,7 @@
                   </div>
                 </div>
               </div>
-              <div class="nl-team-button">
+              <div class="nl-team-button">  
                 <button type="button" class="btn btn-team btn-big-radius active field-view-btn">field view</button>
                 <button type="button" class="btn btn-team btn-big-radius list-view-btn">list view</button>
               </div>
