--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -868,6 +868,10 @@
               </div>
             </div>
             <div class="col-md-12 col-lg-5 col-xl-5">
+              <div class="save-delete">
+                <button class="btn btn-primary">Save</button>
+                <button class="btn btn-warning">Delete</button>
+              </div>
               <div class="nl-team-info">
                 <div class="nl-team-name">your team</div>
                 <div class="nl-team-data">
