--- a/markup/_dist/register.html
+++ b/markup/_dist/register.html
@@ -36,8 +36,8 @@
     <main>
       <section class="nl-section registration-wrapper">
         <div class="row">
-          <div class="col-xl-3 col-lg-2 col-md-2 col-sm-2"> </div>
-          <div class="col-xl-6 col-lg-8 col-md-8 col-sm-8"> 
+          <div class="col-1 col-sm-2 col-md-2 col-lg-2 col-xl-3"></div>
+          <div class="col-10 col-sm-8 col-md-8 col-lg-8 col-xl-6">
             <div id="registrationSection" tabindex="-1" role="dialog" aria-labelledby="loginSectionLabel" aria-hidden="true">
               <div role="document" class="block-dialog"></div>
               <div class="block-content">
@@ -90,7 +90,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-2 col-md-2 col-sm-2"></div>
+          <div class="col-1 col-sm-2 col-md-2 col-lg-2 col-xl-3"></div>
         </div>
       </section>
     </main>
