updated css of homepage to be more responsive and tried to delete redundad classed in css code

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -187,7 +187,7 @@
                           <li class="nav-item"><a data-toggle="tab" href="#player1" role="tab" class="nav-link active">
                               <div class="menu-item top-5">
                                 <div class="players"> 
-                                  <div class="player-thumbnail"></div>
+                                  <div class="player-thumbnail top-5-images"></div>
                                   <div class="number">
                                     <p>1</p>
                                   </div>
@@ -199,7 +199,7 @@
                           <li class="nav-item"><a data-toggle="tab" href="#player2" role="tab" class="nav-link">
                               <div class="menu-item top-5">
                                 <div class="players"> 
-                                  <div class="player-thumbnail"></div>
+                                  <div class="player-thumbnail top-5-images"></div>
                                   <div class="number">
                                     <p>2</p>
                                   </div>
@@ -211,7 +211,7 @@
                           <li class="nav-item"><a data-toggle="tab" href="#player3" role="tab" class="nav-link">
                               <div class="menu-item top-5">
                                 <div class="players"> 
-                                  <div class="player-thumbnail"></div>
+                                  <div class="player-thumbnail top-5-images"></div>
                                   <div class="number">
                                     <p>3</p>
                                   </div>
@@ -223,7 +223,7 @@
                           <li class="nav-item"><a data-toggle="tab" href="#player4" role="tab" class="nav-link">
                               <div class="menu-item top-5">
                                 <div class="players"> 
-                                  <div class="player-thumbnail"></div>
+                                  <div class="player-thumbnail top-5-images"></div>
                                   <div class="number">
                                     <p>4</p>
                                   </div>
@@ -235,7 +235,7 @@
                           <li class="nav-item"><a data-toggle="tab" href="#player5" role="tab" class="nav-link">
                               <div class="menu-item top-5">
                                 <div class="players"> 
-                                  <div class="player-thumbnail"></div>
+                                  <div class="player-thumbnail top-5-images"></div>
                                   <div class="number">
                                     <p>5</p>
                                   </div>
